fixed overflow

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -160,7 +160,7 @@ footer {
     -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 2px rgba(0,0,0,.1);
     -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 2px rgba(0,0,0,.1);
     box-shadow: inset 0 1px 0 #fff, 0 1px 2px rgba(0,0,0,.1);
-    overflow: hidden;
+    overflow: visible;
 }
 
 .infobit.value-infobit {
@@ -169,6 +169,7 @@ footer {
 
 .infobit.welcome-infobit {
   margin-bottom: 30px;
+  overflow: visible;
 }
 
 .login-infobit-padding {
